# country_risk_reporting_agent

./: .gitignore  README.md  pyproject.toml
database_creation/: database_creator_2019.py  database_creator_2021.py  database_creator_2023.py
examples/: example_notebook.ipynb
src/country_risk_agent/: helpers.py  prompts.py  rag_tools.py  report_agent.py
src/vector_stores/_2019/column_db_2019/: chroma.sqlite3
src/vector_stores/_2019/country_db_2019/: chroma.sqlite3
src/vector_stores/_2021/column_db_2021/: chroma.sqlite3
src/vector_stores/_2021/country_db_2021/: chroma.sqlite3
src/vector_stores/_2023/column_db_2023/: chroma.sqlite3
src/vector_stores/_2023/country_db_2023/: chroma.sqlite3
vector_store_creation/WDI/: vector_store_creator_country_wdi.py
vector_store_creation/_2019/: vector_store_creator_column_2019.py  vector_store_creator_country_2019.py
vector_store_creation/_2021/: vector_store_creator_column_2021.py  vector_store_creator_country_2021.py
vector_store_creation/_2023/: vector_store_creator_column_2023.py  vector_store_creator_country_2023.py
